--- a/table.html
+++ b/table.html
@@ -7,6 +7,8 @@
 <body>
   <br>
   <br>
+  <form style="text-align:right";><a href="file:///home/ukistu08/Documents/Uki-exercise/css/assignment.html">
+    <input type="button" value="Home"></a></form>
   <br>
   <center>
   <table border="1" style="border:1px solid black; border-collapse:collapse;" width=900px; height=500px  >
